  instead of the string type ID of the class.

- Fixed bugs in the Slice parser related to optional values:

  * The parser was too strict when validating tags of optional data
    members. It is legal to reuse the tag of an inherited data member
    but the parser treated it as an error.

  * The parser did not detect duplicate tags among the optional
    parameters in an operation.


======================================================================
Changes since version 3.4.2
======================================================================


General Changes
===============

- Added support for TLS 1.1 and TLS 1.2 in IceSSL for C++ and Java.

- IceGrid now supports a new proxy-options attribute on the <adapter>
  <replica-group>, <object> and <allocatable> XML descriptor
  elements. This attribute allows to specify the proxy options to use
  for well-known objects or allocatable objects. For adapters, it also
  generates the object adapter ProxyOptions property in the server or
  service configuration file. This change requires a IceGrid database
  upgrade.

- Improved Glacier2 permission verifiers to permit throwing
  Glacier2::PermissionDeniedException exceptions. Glacier2 now
  forwards permission denied exceptions to the client.

- The Slice compilers now define the ICE_VERSION preprocessor macro
  so that you can use the Ice version to conditionally compile your
  Slice definitions.

- Fixed bug where the UDP client endpoint --interface option would be
  ignored on some platforms (Windows and OS X).

- IceGrid now enables active connection management for its object
  adapters to allow client connections to be closed automatically when
  inactive.

- Improved Ice.Trace.Network tracing for transport acceptors. The
  tracing now shows when the object adapter starts listening for
  incoming connections and when it starts accepting them.

- Improved IceStorm batch subscriber sending to wait for the batch to
  be sent before sending another batch.
